# brain-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  brain_mcp.py  pyproject.toml
src/brain_mcp/: __init__.py  __main__.py  models.py  outputs.py  prompts.py  server.py  tools.py  vault.py
tests/: conftest.py  test_vault.py
